--- a/main/templates/thankyou.html
+++ b/main/templates/thankyou.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-<div>
-    <h1>Thank you</h1>
-    <p>Message was sent successfully</p>
+<div style="color: white; text-align: center; margin: 200px;">
+    <h1 style="font-size: 60px;">Thank you</h1>
+    <p style="font-size: 30px;">Message was sent successfully</p>
 </div>
 
     
