--- a/main/templates/thankyou.html
+++ b/main/templates/thankyou.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 
-<div style="color: white; text-align: center; margin: 200px;">
+<div style="color: white; text-align: center; margin: 200px auto;">
     <h1 style="font-size: 60px;">Thank you</h1>
     <p style="font-size: 30px;">Message was sent successfully</p>
 </div>
 
-    
+
 {% endblock %}
